--- a/pom.xml
+++ b/pom.xml
@@ -49,5 +49,10 @@
             <artifactId>commons-csv</artifactId>
             <version>1.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <version>1.4.0.RELEASE</version>
+        </dependency>
     </dependencies>
 </project>
